--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,12 @@
             "name": "Dbg Client ✨",
             "type": "cppdbg",
             "request": "launch",
-            "cwd": "C:\\Users\\ludvi\\Programming\\MvL\\bin",
-            "program": "C:\\Users\\ludvi\\Programming\\MvL\\bin\\client.exe",
+            "cwd": "${workspaceFolder}/bin",
+            "program": "${workspaceFolder}/bin/client.exe",
             "stopAtEntry": false,
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
+            "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
@@ -28,12 +28,12 @@
             "name": "Dbg Server 🥂",
             "type": "cppdbg",
             "request": "launch",
-            "cwd": "C:\\Users\\ludvi\\Programming\\MvL\\bin",
-            "program": "C:\\Users\\ludvi\\Programming\\MvL\\bin\\server.exe",
+            "cwd": "${workspaceFolder}/bin",
+            "program": "${workspaceFolder}/bin/server.exe",
             "stopAtEntry": false,
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
+            "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
