--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"type": "shell",
 			"label": "Build Client ✨",
-			"command": "C:\\Users\\ludvi\\Programming\\MvL\\compile_client.bat",
+			"command": "${workspaceFolder}/compile_client.bat",
 			"group": "build",
 			"problemMatcher": ["$gcc"],
 			"presentation": {
@@ -17,7 +17,7 @@
 		{
 			"type": "shell",
 			"label": "Build Server 🥂",
-			"command": "C:\\Users\\ludvi\\Programming\\MvL\\compile_server.bat",
+			"command": "${workspaceFolder}/compile_server.bat",
 			"group": "build",
 			"problemMatcher": ["$gcc"],
 			"presentation": {
@@ -41,17 +41,26 @@
 		{
 			"type": "shell",
 			"label": "Run Client #1 ✨",
-			"command": "C:\\Users\\ludvi\\Programming\\MvL\\bin\\client.exe"
+			"command": "${workspaceFolder}/bin/client.exe",
+			"options": {
+				"cwd": "${workspaceFolder}/bin/"
+			}
 		},
 		{
 			"type": "shell",
 			"label": "Run Client #2 ✨",
-			"command": "C:\\Users\\ludvi\\Programming\\MvL\\bin\\client.exe"
+			"command": "${workspaceFolder}/bin/client.exe",
+			"options": {
+				"cwd": "${workspaceFolder}/bin/"
+			}
 		},
 		{
 			"type": "shell",
 			"label": "Run Server 🥂",
-			"command": "C:\\Users\\ludvi\\Programming\\MvL\\bin\\server.exe"
+			"command": "${workspaceFolder}/bin/server.exe",
+			"options": {
+				"cwd": "${workspaceFolder}/bin/"
+			}
 		}
 	]
 }
